2009-08-27: .312
  - Try fixing test script to work properly under Perl 5.11
  - Added manifesto-esque postamble to main OP.pm document
  - Misc doc updates

2009-08-20: .311
  - Changed from developer release to stable
  - OP::Shell was moved to its own distribution, Acme::Shell

2009-08-17: .310_001
  - Rewrote tests and added runtime framework loader (OP::Runtime)
  - Persistence now delegates to vendor-specific DBI packages,
    rather than hosting a bunch of if/else statements. Future backing
    store types should extend OP::Persistence::Generic and override
    DBI logic as necessary.
  - Gave SQLite support some attention
  - Added OP::Serial for first-class Serial type assertions

2009-08-10: .308
  - More doc updates and bug fixes
  - OP::DateTime now supports DATETIME + other column types, see POD
  - OP::Double now avoids E notation when stringifying, see POD

2009-07-28: .305
  - OP_HOME now defaults to the current user's home directory
  - Added "opconf" .oprc generation script
  - OP::Subtype constructors are no longer used outside of OP
    internals-- the "subtype" assert argument has been added, which
    replaces them in public usage and should feel cleaner (see examples)
  - OP no longer has to be bootstrapped from package 'main', and no
    longer exports OP::Subtype constructors
  - OP.t now skips tests if it can't find a usable temp filesystem
  - More doc updates and bug fixes

2009-07-24: .304
  - Updated docs
  - make test: Cleanup error handling, added schema manip tests
  - Cleanup handling of custom rc files
  - Added "oped" and "opid" cli utils

2009-07-12: .303
  - Bozo fixes

2009-07-10: .302
  - Got rid of some half-baked experimental features

2009-06-19: .300
  - Removed all usage of source filters
  - Misc fixes to experimental classes

2009-04-21: Developer release 0.20_03
  - 0.21 release candidate
  - Add missing dependencies to Makefile.PL
  - Add rudimentary post-install test script
  - Several doc edits