@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use Error qw| :try |;
-use OP;
+use OP qw| :all |;
 
 use constant VIM => '/usr/bin/vim';
 
