@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use Error qw| :try |;
-use OP;
+use OP qw| :all |;
 
 sub usage {
   my $message = shift;
