@@ -105,7 +105,7 @@ In file <i>YourApp/Example.pm</i>:
 use strict;
 use warnings;
 
-use OP;
+use OP qw| :all |;
 
 create "<i>YourApp::Example</i>" => { };
 </pre>
